hphp/test/zend/bad/ext-gd/bug45799.php
<?php
$img = imagecreate(500,500);
imagepng($img);
imagedestroy($img);
?>